tests/baselines/reference/parserForInStatement4.errors.txt
==== tests/cases/compiler/parserForInStatement4.ts (1 errors) ====
    for (var a = 1 in X) {
                      ~
!!! parserForInStatement4.ts(1,19): error TS2095: Cannot find name 'X'.
    }